multiple pages added and link routes handled using express router

--- a/views/docadd.ejs
+++ b/views/docadd.ejs
@@ -16,11 +16,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <link rel="stylesheet" href="./css/docadd.css">
+    <link rel="stylesheet" href="./css/navbar.css">
 </head>
 
 <body>
+    <!-- header section starts -->
+    <%- include('../partials/navbar.ejs') -%>
 
-    <!-- header section ends -->
+    <!-- Header section ends -->
 
     <section class="book" id="book">
 
