--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -21,6 +21,10 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    padding-top: 10rem;
+}
+
 section {
     display: flex;
     gap: 2rem;
@@ -34,46 +38,110 @@ body {
     background: rgb(235, 230, 248);
 }
 
-section:nth-child(even){
+section:nth-child(even) {
     background: #ebe6f8;
 }
 
-button{
+button {
     margin-left: 5rem;
 }
 
-/* Navbar items */
-.navbar{
-    background-color: rgba(223, 223, 223, 0.758);
+/* navbar
+.nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 1.3rem 1rem 1.3rem 3rem;
+    background: var(--blue);
+    justify-content: space-between;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
-.nav-item {
-    font-size: 1.2rem;
-    font-weight: 450;
+.nav,
+.nav .nav-links {
+    display: flex;
 }
 
-.nav-link:hover {
-    transition: ease-in-out;
-    color: #737be9;
-    text-decoration: underline;
+.nav .nav-links li {
+    margin-left: 2.8rem;
 }
 
-/* ----*** Other Self Made Sections ***---- */
-.heading {
-    text-align: center;
-    color: var(--black);
+.nav a,
+.nav i {
+    color: #fff;
+    text-decoration: none;
+}
+
+.nav .navCloseBtn,
+.nav .navOpenBtn {
+    display: none;
+}
+
+.nav .logo {
     font-size: 2rem;
 }
 
-.heading img {
-    margin-bottom: 0.5rem;
+.nav .nav-links {
+    list-style: none;
 }
 
-.navrbar .container-fluid .header span{
-    font-size: 2.2rem;
-    margin-left: 0.4rem;
-    color: var(--blue);
+
+@media screen and (max-width: 1160px) {
+    .nav {
+        padding: 1.5rem;
+    }
 }
+
+@media screen and (max-width: 950px) {
+    .nav {
+        padding: 1rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+
+    .nav .navOpenBtn,
+    .nav .navCloseBtn {
+        display: block;
+    }
+
+    .nav .nav-links {
+        position: fixed;
+        top: 0;
+        left: -100%;
+        height: 100%;
+        max-width: 280px;
+        width: 100%;
+        padding-top: 100px;
+        row-gap: 30px;
+        flex-direction: column;
+        background-color: #11101d;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        transition: all 0.4s ease;
+        z-index: 100;
+    }
+
+    .nav.openNav .nav-links {
+        left: 0;
+    }
+
+    .nav .navOpenBtn {
+        color: #fff;
+        font-size: 20px;
+        cursor: pointer;
+    }
+
+    .nav .navCloseBtn {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        color: #fff;
+        font-size: 20px;
+        cursor: pointer;
+    }
+
+} */
 
 /* ---*** Heading Section ***--- */
 .heading {
@@ -125,52 +193,18 @@ button{
     margin-left: 1rem;
 }
 
-/* --- add buttons ---- */
-.add-btn{
-    display: inline-block;
-    margin-top: 0.8rem;
-    padding: 0.5rem;
-    padding-left: 1rem;
-    border-radius: .5rem;
-    border: var(--border);
-    cursor: pointer;
-    font-size: larger;
-    color: rgb(7, 7, 7);
-    box-shadow: var(--box-shadow);
-    background-color: #fff;
-}
-
-.add-btn span{
-    padding: 0.4rem 1rem;
-    border-radius: 0.4rem;
-    background: var(--blue);
-    color: #fff;
-    margin: 0.4rem;
-}
-
-.add-btn:hover {
-    background: var(--blue);
-    color: #fff;
-}
-
-.add-btn:hover span {
-    color: var(--blue);
-    background: #fff;
-}
-
 /* ---*** Main Content Section ***---- */
-
 
 .main-content .box-container {
     margin-inline: auto;
     width: 90%;
 }
 
-.main-content .close-dash-icon{
+.main-content .close-dash-icon {
     margin-top: 1.5rem;
 }
 
-.main-content .close-dash-icon a{
+.main-content .close-dash-icon a {
     padding-left: 1.8rem;
     color: var(--blue);
     font-size: larger;
@@ -179,14 +213,14 @@ button{
 
 /* ---clinic section -- */
 
-.main-content .clinics-list-heading .heading{
+.main-content .clinics-list-heading .heading {
     font-size: 4.1rem;
     margin-top: -2rem;
 }
 
 .main-content .box-container .box {
     display: inline-block;
-    
+
     background: #fff;
     box-shadow: var(--box-shadow);
     border-radius: .5rem;
@@ -212,18 +246,19 @@ button{
     font-size: 1rem;
 }
 
-.main-content .box-container .box p i{
+.main-content .box-container .box p i {
     font-size: 1rem;
     padding-bottom: 0.5rem;
     color: var(--blue);
 }
 
-.main-content .box-container .box p span{
+.main-content .box-container .box p span {
     font-size: 0.9rem;
 
 }
+
 /* ---*** Image CSS ***--- */
-.image i{
+.image i {
     text-align: center;
     border: 4px solid var(--blue);
     padding: 1rem;
@@ -233,7 +268,7 @@ button{
     background-color: #fff;
 }
 
-.image i:hover{
+.image i:hover {
     background-color: #737be9;
     color: #fff;
     cursor: pointer;
@@ -333,78 +368,7 @@ button{
     transition: 0.2s ease-in-out;
 }
 
-#document-image img{
+#document-image img {
     height: 15rem;
     width: 15rem;
-}
-
-/* ---- Footer CSS --- */
-
-/* ***** Icons Social Media **** */
-.main-content .icon-container{
-    background: #fff;
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-
-.icons .share{
-    display: flex;
-    justify-content: center;
-}
-
-.icons .share a{
-    height: 5rem;
-    width: 5rem;
-    margin-bottom: 5rem;
-    font-size: 2.3rem;
-    border: var(--border);
-    color: var(--blue);
-    box-shadow: var(--box-shadow);
-    border-radius: 0.5rem;
-    margin-right: 1.6rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.icons .share a:hover{
-    background: var(--blue);
-    color: #fff;
-}
-
-/*  ----- ******* Footer Section ****** ----- */
-#contact{
-    display: inline;
-    padding: 2rem;
-}
-
- #box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
-}
-
- #box-container .box h3{
-    font-size: 2rem;
-    color: var(--black);
-    padding: .8rem;
-}
-
- #box-container .box a{
-    display: block;
-    font-size: 1.1rem;
-    color: var(--light-color);
-    padding: 1rem;
-}
-
- #box-container .box a i{
-    padding-right: 0.5rem;
-    color: var(--blue);
-}
-
- #box-container .box a:hover i{
-    padding-right: 1.5rem;
 }
