--- a/views/clinics.ejs
+++ b/views/clinics.ejs
@@ -14,51 +14,14 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
+    
+    <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/clinics.css">
-
 </head>
 
 <body>
-
-    <!-- -----*** NAVBAR SECTION STARTS HERE *****------- -->
-
-    <nav class="navbar navbar-expand-lg">
-
-        <div class="container-fluid">
-
-            <a class="navbar-brand px-4 py-2 heading" href="#">
-                <i class="fas fa-hospital"></i>
-                Port<span>Folio</span>
-            </a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-
-                <ul class="navbar-nav px-4 py-2">
-
-                    <li class="nav-item me-5">
-                        <a class="nav-link" aria-current="page" href="#">Home</a>
-                    </li>
-
-                    <li class="nav-item me-5">
-                        <a class="nav-link" href="#about">About</a>
-                    </li>
-
-                    <li class="nav-item me-5">
-                        <a class="nav-link" href="#projects">Projects</a>
-                    </li>
-
-                    <li class="nav-item me-8">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <!-- header section starts -->
+    <%- include('../partials/navbar.ejs') -%>
 
     <!-- ********** NAVBAR ENDS **********-->
 
@@ -118,7 +81,7 @@
 
         <div class="add-button">
             <img src="./images/add files.svg" alt="">
-            <button class="btn" type="submit">Add Clinic <span><i class="fas fa-angle-double-right"></i></span></button>
+            <a class="btn" href="/clinicadd" type="submit">Add Clinic <span><i class="fas fa-angle-double-right"></i></span></a>
         </div>
 
     </section>
