--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -11,11 +11,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Oxygen&family=Prompt:wght@300&display=swap"
         rel="stylesheet">
-        
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="./css/dashboard.css">
@@ -24,43 +19,7 @@
 <body>
     <!-- -----*** NAVBAR SECTION STARTS HERE *****------- -->
 
-    <nav class="navbar navbar-expand-lg">
-
-        <div class="container-fluid">
-
-            <a class="navbar-brand px-4 py-2 heading" href="#">
-                <i class="fas fa-hospital"></i>
-                Port<span>Folio</span>
-            </a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-
-                <ul class="navbar-nav px-4 py-2">
-
-                    <li class="nav-item me-5">
-                        <a class="nav-link" aria-current="page" href="#">Home</a>
-                    </li>
-
-                    <li class="nav-item me-5">
-                        <a class="nav-link" href="#about">About</a>
-                    </li>
-
-                    <li class="nav-item me-5">
-                        <a class="nav-link" href="#projects">Projects</a>
-                    </li>
-
-                    <li class="nav-item me-8">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <%- include('../partials/navbar.ejs') -%>
 
     <!-- ********** NAVBAR ENDS **********-->
 
@@ -72,7 +31,8 @@
 
             <h1 class="heading">
                 <i class="fas fa-folder-open"></i>
-                My <span>Documents</span></h1>
+                My <span>Documents</span>
+            </h1>
 
             <div class="box">
 
@@ -98,7 +58,8 @@
                         officiis aut quasi debitis sit maiores fugit quam impedit, laboriosam voluptatem
                         nesciunt
                         provident neque dicta hic!</p>
-                    <a href="#" class="btn">Prescription <span class="fas fa-angle-double-right"></span></a>
+                    <a href="../public/files/Assignment_CloudComputing_22-23.pdf" target="_blank"
+                        class="btn">Prescription <span class="fas fa-angle-double-right"></span></a>
 
                 </div>
 
@@ -128,7 +89,8 @@
                         officiis aut quasi debitis sit maiores fugit quam impedit, laboriosam voluptatem
                         nesciunt
                         provident neque dicta hic!</p>
-                    <a href="#" class="btn">Prescription <span class="fas fa-angle-double-right"></span></a>
+                    <a href="../public/files/Assignment_CloudComputing_22-23.pdf" target="_blank"
+                        class="btn">Prescription <span class="fas fa-angle-double-right"></span></a>
 
                 </div>
 
@@ -158,7 +120,8 @@
                         officiis aut quasi debitis sit maiores fugit quam impedit, laboriosam voluptatem
                         nesciunt
                         provident neque dicta hic!</p>
-                    <a href="#" class="btn">Prescription <span class="fas fa-angle-double-right"></span></a>
+                    <a href="../public/files/Assignment_CloudComputing_22-23.pdf" target="_blank"
+                        class="btn">Prescription <span class="fas fa-angle-double-right"></span></a>
 
                 </div>
 
@@ -168,9 +131,11 @@
                 <img src="./images/add docs.svg" alt="">
 
                 <span>
-                    <button class="add-btn">
-                        Add Document <span class="fas fa-angle-double-right"></span>
-                    </button>
+                    <a href="/docadd" target="_blank">
+                        <button class="btn">
+                            Add Document <span class="fas fa-angle-double-right"></span>
+                        </button>
+                    </a>
                 </span>
             </div>
 
@@ -178,31 +143,29 @@
 
     </section>
 
-    <!-- icons section ends -->
-
-
-    <!-- <div class="icon-container">
-
-        <section class="icons">
-
-            <div class="share">
-                <a href="#" class="fab fa-facebook-f"></a>
-                <a href="#" class="fab fa-twitter"></a>
-                <a href="#" class="fab fa-instagram"></a>
-                <a href="#" class="fab fa-linkedin"></a>
-            </div>
-
-        </section>
-
-    </div> -->
-
     </div>
 
     </div>
 
-    
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 
+    <script>
+
+        const nav = document.querySelector(".nav"),
+            navOpenBtn = document.querySelector(".navOpenBtn"),
+            navCloseBtn = document.querySelector(".navCloseBtn");
+
+
+        navOpenBtn.addEventListener("click", () => {
+            nav.classList.add("openNav");
+        });
+
+
+        navCloseBtn.addEventListener("click", () => {
+            nav.classList.remove("openNav");
+        });
+
+    </script>
 </body>
 
 </html>
