background color changed

--- a/public/css/clinicadd.css
+++ b/public/css/clinicadd.css
@@ -26,7 +26,7 @@ section{
 }
 
 section:nth-child(odd){
-    background: #ebe6f8;
+    background: #efedf4;
 }
 
 /* ----****** Ultimate CSS starts now *****---- */
