user authentication added

--- a/partials/navbar.ejs
+++ b/partials/navbar.ejs
@@ -10,9 +10,9 @@
     <ul class="nav-links">
         <i class="fas fa-plus-circle navCloseBtn"></i>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#about">About Us</a></li>
+        <li><a href="#reviews">Reviews</a></li>
+        <li><a href="#contact">Contact Us</a></li>
     </ul>
 </nav>
