--- a/partials/review.ejs
+++ b/partials/review.ejs
@@ -1,4 +1,4 @@
-<section class="review" id="review">
+<section class="review" id="reviews">
         
     <h1 class="heading">Users <span>Review</span></h1>
 
