--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -33,7 +33,7 @@
 
                     <div class="input-field">
                         <i class="fas fa-user"></i>
-                        <input type="text" placeholder="Username" name="username"/>
+                        <input type="email" placeholder="Email" name="email"/>
                     </div>
 
                     <div class="input-field">
@@ -87,7 +87,7 @@
 
                     <div class="input-field">
                         <i class="fas fa-user-check"></i>
-                        <input type="password" placeholder="Confirm Password" name="confirm_password"/>
+                        <input type="password" placeholder="Confirm Password" name="confirmpassword"/>
                     </div>
 
                     <button type="submit" class="btn">Sign Up <span class="fas fa-angle-double-right"></span></button>
