--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -4,7 +4,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    padding: 1.3rem 1rem 1.3rem 3rem;
+    padding: 1rem 3rem 0.3rem;
     background: var(--blue);
     justify-content: space-between;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -37,6 +37,7 @@
 
 .nav .nav-links {
     list-style: none;
+    margin-top: 1rem;
 }
 
 
