jwt auth and cookies handled

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -14,7 +14,15 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
+
+    <!-- **** Adding Some CSS for specific work **** -->
     <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/button.css">
+
+
+
+
+
     <link rel="stylesheet" href="./css/dashboard.css">
 </head>
 
