--- a/public/css/clinicadd.css
+++ b/public/css/clinicadd.css
@@ -45,10 +45,9 @@ section:nth-child(odd){
 }
 
 #icon {
-    border: 2px solid red;
+    /* border: 2px solid red; */
     height: 2rem;
     width: 2rem;
-
 }
 
 #menu-btn{
@@ -61,40 +60,6 @@ section:nth-child(odd){
     display: none;
 }
 
-/* ---- Button's CSS ----- */
-
-.btn{
-    display: inline-block;
-    margin-top: 0.8rem;
-    padding: 0.5rem;
-    padding-left: 1rem;
-    border-radius: .5rem;
-    border: var(--border);
-    cursor: pointer;
-    font-size: larger;
-    color: rgb(7, 7, 7);
-    box-shadow: var(--box-shadow);
-    background-color: #fff;
-}
-
-.btn span{
-    padding: 0.3rem 0.8rem;
-    border-radius: 0.4rem;
-    background: var(--blue);
-    color: #fff;
-    margin: 0.4rem;
-}
-
-.btn:hover{
-    background: var(--blue);
-    color: #fff;
-}
-
-.btn:hover span{
-    color: var(--blue);
-    background: #fff;
-    margin-left: 1rem;
-}
 
 /* ***** Booking section CSS ***** */
 
