--- a/views/clinicadd.ejs
+++ b/views/clinicadd.ejs
@@ -16,7 +16,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <link rel="stylesheet" href="./css/docadd.css">
+
+
+    <!-- Some specific CSS for stylings -->
     <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/button.css">
+
 </head>
 
 <body>
