--- a/partials/navbar.ejs
+++ b/partials/navbar.ejs
@@ -10,9 +10,8 @@
     <ul class="nav-links">
         <i class="fas fa-plus-circle navCloseBtn"></i>
         <li><a href="#">Home</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#about">About Us</a></li>
-        <li><a href="#reviews">Reviews</a></li>
+        <li><a href="/clinics" target="_blank">Clinics</a></li>
         <li><a href="#contact">Contact Us</a></li>
+        <li><a href="/clinicadd" target="_blank">Add Clinic</a></li>
     </ul>
 </nav>
