--- a/views/clinics.ejs
+++ b/views/clinics.ejs
@@ -81,17 +81,11 @@
 
         <div class="add-button">
             <img src="./images/add files.svg" alt="">
-            <a class="btn" href="/clinicadd" type="submit">Add Clinic <span><i class="fas fa-angle-double-right"></i></span></a>
+            <a class="btn" href="/clinicadd" type="submit" target="_blank">Add Clinic <span><i class="fas fa-angle-double-right"></i></span></a>
         </div>
 
     </section>
 
-
-    <!-- Bootstrap JS -->
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
