clinic list added on dashboard and auth user navbar change added

--- a/partials/navbar.ejs
+++ b/partials/navbar.ejs
@@ -7,11 +7,25 @@
         <a href="#"> CliniCare</a>
     </span>
 
-    <ul class="nav-links">
-        <i class="fas fa-plus-circle navCloseBtn"></i>
-        <li><a href="#">Home</a></li>
-        <li><a href="/clinics" target="_blank">Clinics</a></li>
-        <li><a href="#contact">Contact Us</a></li>
-        <li><a href="/clinicadd" target="_blank">Add Clinic</a></li>
-    </ul>
+    <% if(typeof username === 'undefined') { %>
+
+        <ul class="nav-links">
+            <i class="fas fa-plus-circle navCloseBtn"></i>
+            <li><a href="#">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#about">About</a></li>        
+            <li><a href="#contact">Contact Us</a></li>
+        </ul>
+
+    <% } else { %>
+
+        <ul class="nav-links">
+            <i class="fas fa-plus-circle navCloseBtn"></i>
+            <li><a href="#">Home</a></li>
+            <li><a href="/clinics" target="_blank">Clinics</a></li>
+            <li><a href="/clinicadd" target="_blank">Add Clinic</a></li>
+            <li><a href="#contact">Contact Us</a></li>
+        </ul>
+
+    <% } %>
 </nav>
