--- a/public/css/home.css
+++ b/public/css/home.css
@@ -33,6 +33,7 @@ section{
 }
 
 section:nth-child(even){
+    margin-top: 5rem;
     background: #ebe6f8;
 }
 
@@ -237,148 +238,6 @@ section:nth-child(even){
     color: var(--light-color);
 }
 
-/* -----**** Review Section ****----- */
-
-.slide-container {
-    width: 100%;
-    padding-bottom: 2.2rem;
-
-    /* border: 4px solid rgb(33, 22, 134); */
-}
-
-.slide-content {
-    margin: 0 1.5rem;
-    overflow: hidden;
-    padding: 1.5rem;
-
-    /* border: 4px solid red; */
-}
-
-.review .box {
-    text-decoration: none;
-    color: black;
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center; */
-    /* align-items: center; */
-    border: var(--border);
-
-    box-shadow: var(--skill-box-shadow);
-    border-radius: 1rem;
-    padding: 3rem;
-    /* margin-left: 1rem;
-    margin-right: 1rem; */
-}
-
-.review .box:hover {
-    color: var(--blue);
-    box-shadow: rgba(132, 91, 235, 0.716) 0px 13px 27px, rgba(123, 85, 221, 0.668) 0px 13px 9px;
-    scale: 1.05;
-}
-
-.review .box h3 {
-    font-size: 2.1rem;
-    padding: 1.1rem;
-}
-
-.review .box>div{
-    margin: 0.8rem;
-}
-
-.review .box .image img {
-    height: 20rem;
-    width: 20rem;
-    border-radius: 2rem;
-}
-
-.review .box .skill-content {
-    letter-spacing: 0.1rem;
-    text-align: justify;
-}
-
-.review .box .skill-content .tech {
-    text-align: left;
-}
-
-.swiper-button {
-    color: var(--dark-violet);
-}
-
-.swiper-button:hover {
-    color: var(--blue);
-}
-
-.swiper-pagination-bullet {
-    background-color: var(--black);
-}
-
-.swiper-pagination-bullet-active {
-    background-color: var(--dark-violet);
-}
-
-.swiper-button-next::after {
-    margin-left: 1.5rem;
-}
-
-.swiper-button-prev::after {
-    margin-right: 1.5rem;
-}
-
-
-
-/* .review .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
-    gap: 2rem;
-} 
-
-.review .box-container .box{
-    border: var(--border);
-    border-radius: 4rem;
-    text-align: center;
-    padding: 2.5rem;
-    position: relative;
-    overflow: hidden;
-    box-shadow: var(--box-shadow);
-}
-
-.review .box-container .box img{
-    height: 10rem;
-    width: 10rem;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 0.5rem solid #fff;
-}
-
-.review .box-container .box h3{
-    color: #fff;
-    font-size: 1.5rem;
-    padding: 1.2rem;
-}
-
-.review .box-container .box .stars i{
-    color: var(--black);
-    font-size: 1.2rem;
-    padding-bottom: 1.2rem;
-    color: #fff;
-}
-
-.review .box-container .box .text{
-    color: #fff;
-    font-size: 1.2rem;
-}
-
-.review .box-container .box::before{
-    content: '';
-    position: absolute;
-    bottom: -5rem;
-    left: -14%;
-    background: var(--blue);
-    height: 27rem;
-    width: 120%;
-    z-index: -1;
-} */
-
 /*  ----- ******* Footer Section ****** ----- */
 .footer .box-container{
     display: grid;
@@ -407,42 +266,10 @@ section:nth-child(even){
     padding-right: 1.5rem;
 }
 
-
-/* -----***** SWIPER BUTTON CSS -----*****/
-/* 
-.slide-container {
-    width: 100%;
-    padding-bottom: 2.2rem;
-
+/* ---- media query -----*/
+@media screen and (max-width: 475px) {
+    .heading{
+        font-size: 4rem;
+        margin-top: 1rem;
+    }
 }
-
-.slide-content {
-    margin: 0 1.5rem;
-    overflow: hidden;
-    padding: 2rem;
-
-}
-
-.swiper-button {
-    color: var(--dark-violet);
-}
-
-.swiper-button:hover {
-    color: #29cdc2fa;
-}
-
-.swiper-pagination-bullet {
-    background-color: var(--black);
-}
-
-.swiper-pagination-bullet-active {
-    background-color: var(--dark-violet);
-}
-
-.swiper-button-next::after {
-    margin-left: 1.5rem;
-}
-
-.swiper-button-prev::after {
-    margin-right: 1.5rem;
-}  */
