--- a/views/clinicadd.ejs
+++ b/views/clinicadd.ejs
@@ -44,14 +44,13 @@
 
                 <h3 class="heading">Enter Cli<span>nic Details</span></h3>
 
-                <input type="text" name="name" placeholder="Enter Clinic's Name" class="box">
+                <input type="text" name="clinic_name" placeholder="Enter Clinic's Name" class="box">
 
-                <input type="text" name="name" placeholder="Enter Doctor's Name" class="box">
-                <input type="text" name="name" placeholder="Enter Address" class="box">
+                <input type="text" name="doctor_name" placeholder="Enter Doctor's Name" class="box">
 
-                <input type="number" name="name" placeholder="Enter PIN" class="box">
+                <input type="text" name="address" placeholder="Enter Address" class="box">
 
-                <input type="date" name="clinic-name" placeholder="Enter Clinic's Name" class="box">
+                <input type="text" name="close_days" placeholder="Enter Close Days" class="box">
                 
                 <button type="submit" class="btn">Submit <span class="fas fa-angle-double-right"></span></button>
 
