--- a/views/docadd.ejs
+++ b/views/docadd.ejs
@@ -15,6 +15,8 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
+
+    
     <link rel="stylesheet" href="./css/docadd.css">
     <link rel="stylesheet" href="./css/navbar.css">
 </head>
@@ -32,15 +34,16 @@
         <div class="row">
 
             <div class="image">
-                <img src="./images/add docs.svg" alt="">
+                <img src="./images/add docs.svg" alt="documentAdd">
             </div>
 
-            <form action="" method="POST">
+            <form action="/docadd" method="post" id="docForm">
 
                 <h3 class="heading">Enter Docu<span>ment Details</span></h3>
 
-                <input type="text" name="name" placeholder="Enter Doctor's Name" class="box">
-                <input type="date" name="clinic-name" placeholder="Enter Clinic's Name" class="box">
+                <input type="text" name="docName" placeholder="Enter Doctor's Name" class="box">
+                <input type="text" name="clinicName" placeholder="Enter Clinic's Name" class="box">
+                <input type="date" name="visitDate" placeholder="Enter Visiting Date" class="box">
                 <textarea name="description" cols="30" rows="5" class="box" placeholder="Enter description of document"></textarea>
 
                 <label class="box boxfill"> 
@@ -59,6 +62,7 @@
                 <button type="submit" class="btn">Submit <span class="fas fa-angle-double-right"></span></button>
 
             </form>
+
         </div>
 
     </section>
@@ -84,10 +88,8 @@
                 newDiv.innerHTML = '<i class="fas fa-file-pdf"></i>' + target.files[0].name;
 
             allFiles.appendChild(newDiv);
-
-            
         }
-        
+    
     </script>
 </body>
 
