--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,6 +28,7 @@
     
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/review.css">
 </head>
 
 <body>
@@ -73,45 +74,6 @@
     <%-include('../partials/contact.ejs') -%>
 
 
-
-
-
-    <!-- ********* JAVASCRIPT ****** -->
-
-   <!-- *********** Swiper JS **********  -->
-    <script src="./js/swiper-bundle.min.js"></script>
-
-    <script>
-        var swiper = new Swiper(".slide-content", {
-            slidesPerView: 2,
-            spaceBetween: 30,
-            loop: true,
-            centreSlide: true,
-            grabCursor: true,
-            pagination: {
-                el: ".swiper-pagination",
-                clickable: true,
-                dynamicBullets: true
-            },
-            navigation: {
-                nextEl: ".swiper-button-next",
-                prevEl: ".swiper-button-prev",
-            },
-
-            breakpoints: {
-                0: {
-                    slidesPerView: 1,
-                },
-                995: {
-                    slidesPerView: 2,
-                },
-                1388: {
-                    slidesPerView: 3,
-                },
-            },
-        });
-    </script>
-    <!-- ********************************* -->
 </body>
 
 </html>
